--- a/Mini Project (CSS)/style.css
+++ b/Mini Project (CSS)/style.css
@@ -36,4 +36,34 @@
 
 }
 
+.sidebar_manu .logo a {
+  position: absolute;
+  left: 50px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.sidebar_manu .btn_two {
+  color: gray;
+  font-size: 25px;
+  line-height: 60px;
+  position: absolute;
+  left: 275px;
+  opacity: 0;
+
+}
+
+.sidebar_manu .menu {
+  position: absolute;
+  width: 100px;
+  top: 80px;
+}
+
+.sidebar_manu .menu li{
+  margin-top: 6px;
+  padding: 14px 20px;
+}
+
 
