--- a/Booststrap/Sign_in.css
+++ b/Booststrap/Sign_in.css
@@ -43,14 +43,20 @@ body{
   box-shadow: none;
 }
 
+.wrapper .password-info{
+
+  font-size: 10px;
+
+}
+
 .wrapper .submit_btn{
-  padding: 15px;
+  padding: 10px 15px;
   font-weight: 500;
 }
 
 .wrapper .login_with{
-  padding: 15px;
-  font-size: 15px;
+  padding: 8px 15px;
+  font-size: 13px;
   font-weight: 500;
   transition: 0.3s ease-in-out;
   border-radius: 12px;
@@ -68,7 +74,7 @@ body{
 }
 
 .wrapper .login_with img{
-  max-width: 8%;
+  max-width: 7%;
 }
 
 
