--- a/Mini Project (CSS)/style.css
+++ b/Mini Project (CSS)/style.css
@@ -1,42 +1,49 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: "Poppins", sans-serif;
 }
 
-.main_box {
+.main_box{
   background: url("photo.jpg");
   height: 100vh;
+  width: 100%;
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.btn_one{
+.btn_one i {
   color: white;
   font-size: 30px;
   font-weight: 700;
   position: absolute;
   left: 16px;
   line-height: 60px;
+  cursor: pointer;
+  transition: all 0.3s linear;
 }
 
-.sidebar_manu{
+.sidebar_menu {
   position: fixed;
+  left: -300px;
   height: 100vh;
   width: 300px;
   background-color: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
-
+  box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5);
+  transition: all 0.3s linear;
 }
 
-.sidebar_manu .logo {
+.sidebar_menu .logo {
   position: absolute;
   width: 100%;
   line-height: 60px;
-  box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
-
+  box-shadow: 0px 2px 4px rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  height: 60px;
 }
 
-.sidebar_manu .logo a {
+.sidebar_menu .logo a {
   position: absolute;
   left: 50px;
   color: white;
@@ -45,25 +52,86 @@
   font-weight: 500;
 }
 
-.sidebar_manu .btn_two {
-  color: gray;
+.sidebar_menu .btn_two i {
+  color: grey;
   font-size: 25px;
   line-height: 60px;
   position: absolute;
   left: 275px;
   opacity: 0;
-
+  cursor: pointer;
+  transition: all 0.3s linear;
 }
 
-.sidebar_manu .menu {
+
+.sidebar_menu .menu {
   position: absolute;
-  width: 100px;
+  width: 100%;
   top: 80px;
 }
 
-.sidebar_manu .menu li{
+.sidebar_menu .menu li {
   margin-top: 6px;
   padding: 14px 20px;
 }
+
+.sidebar_menu .menu i,a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.sidebar_menu .menu i {
+  padding-right: 8px;
+}
+
+.sidebar_menu .social_media {
+  position: absolute;
+  left: 25%;
+  bottom: 50px;
+}
+
+.sidebar_menu .social_media i {
+  color: white;
+  opacity: 0.5;
+  padding: 5px;
+}
+
+#check{
+  display: none;
+}
+
+.sidebar_menu .menu li:hover {
+  box-shadow: 0px 0px 4px rgba(255, 255, 255, 0.5);
+  border: 2px solid white;
+  border-radius: 7px;
+}
+
+.btn_one i:hover {
+  font-size: 40px;
+}
+
+.btn_two i:hover {
+  font-size: 30px;
+}
+
+.sidebar_menu .social_media i:hover {
+  opacity: 1;
+  transform: scale(1.1);
+}
+
+#check:checked ~ .sidebar_menu {
+  left: 0;
+}
+
+#check:checked ~ .btn_one i {
+  opacity: 0;
+}
+
+#check:checked ~ .sidebar_menu .btn_two i {
+  opacity: 1;
+}
+
+
 
 
