--- a/Landing Pages/LP_1.css
+++ b/Landing Pages/LP_1.css
@@ -12,5 +12,27 @@ html,body{
 #main {
   height: 100%;
   width: 100%;
-  background-color: hsl(346deg, 17%, 70%)
+  background-color: hsl(346deg, 17%, 70%);
+  display: flex;
+}
+
+#part1{
+  height: 100%;
+  width: 26%;
+  /* background-color: red; */
+}
+
+#part2{
+  height: 100%;
+  width: 67%;
+  background-color: rgb(0, 255, 247);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#part3{
+  height: 100%;
+  width: 7%;
+  /* background-color: rgb(43, 255, 0); */
 }
