--- a/Landing Pages/LP_1.css
+++ b/Landing Pages/LP_1.css
@@ -1,38 +1,66 @@
 *{
-  margin: 0px;
-  padding: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 html,body{
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
-#main {
-  height: 100%;
-  width: 100%;
-  background-color: hsl(346deg, 17%, 70%);
+#main{
   display: flex;
+  width: 100%;
+  height: 100%;
+  
 }
 
-#part1{
+#left {
+  width: 40%;
   height: 100%;
-  width: 26%;
-  /* background-color: red; */
 }
 
-#part2{
-  height: 100%;
-  width: 67%;
-  background-color: rgb(0, 255, 247);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+#lnav{
+  display: flex;
+  width: 100%;
+  padding: 20px 30px;
+  justify-content: space-between;
+
 }
 
-#part3{
+#lnavr a{
+  margin-left: 20px;
+}
+
+#right {
+  width: 60%;
   height: 100%;
-  width: 7%;
-  /* background-color: rgb(43, 255, 0); */
+  background-color: white;
+}
+
+#rtop {
+  display: flex;
+  width: 100%;
+  height: 50%;
+  background-color: aqua;
+}
+
+#rbottom {
+  width: 100%;
+  height: 50%;
+  background-color: maroon;
+}
+
+#rtopleft {
+  width: 50%;
+  height: 100%;
+  background-color: chartreuse;
+}
+
+#rtopright {
+  width: 50%;
+  height: 100%;
+  background-color: peru;
 }
