--- a/Landing Pages/LP_1.css
+++ b/Landing Pages/LP_1.css
@@ -18,6 +18,7 @@ html,body{
 }
 
 #left {
+  position: relative;
   width: 40%;
   height: 100%;
 }
@@ -30,8 +31,53 @@ html,body{
 
 }
 
+#lnavr {
+  display: flex;
+  align-items: center;
+}
+
+#textcenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+#textcenter h1 {
+  font-size: 80px;
+  font-weight: 900;
+}
+
+#textcenter p {
+  opacity: .6;
+  font-size: 12px;
+  line-height: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#textcenter a {
+  text-decoration: none;
+  color: black;
+  border-bottom: 1px solid black;
+  padding-bottom: 5px;
+  font-size: 13px;
+  font-weight: 600;
+  opacity: .6;
+
+}
+
+
 #lnavr a{
-  margin-left: 20px;
+  margin-right: 20px;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+#lnavr i{
+  color: royalblue;
 }
 
 #right {
@@ -50,17 +96,23 @@ html,body{
 #rbottom {
   width: 100%;
   height: 50%;
-  background-color: maroon;
+  background-image: url(https://images.unsplash.com/photo-1490474418585-ba9bad8fd0ea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-position: center;
+  background-size: cover;
 }
 
 #rtopleft {
   width: 50%;
   height: 100%;
-  background-color: chartreuse;
+  background-image: url(https://images.unsplash.com/photo-1557800636-894a64c1696f?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8b3JhbmdlfGVufDB8fDB8fHww);
+  background-size: cover ;
+  background-position: center;
 }
 
 #rtopright {
   width: 50%;
   height: 100%;
-  background-color: peru;
+  background-image: url(https://plus.unsplash.com/premium_photo-1666264200762-f2ae0643b9ca?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  background-position: center;
 }
